WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177249
inspector/dom/content-node-region-info.html and inspector/dom/content-flow tests crashing
https://bugs.webkit.org/show_bug.cgi?id=177249
Summary
inspector/dom/content-node-region-info.html and inspector/dom/content-flow te...
Ryan Haddad
Reported
2017-09-20 10:16:44 PDT
inspector/dom/content-node-region-info.html and inspector/dom/content-flow tests crashing
https://build.webkit.org/results/Apple%20Sierra%20Release%20WK2%20(Tests)/r222259%20(4421)/results.html
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000108621c19 Inspector::InspectorObjectBase::writeJSON(WTF::StringBuilder&) const + 361 (InspectorValues.cpp:784) 1 com.apple.JavaScriptCore 0x0000000108621c22 Inspector::InspectorObjectBase::writeJSON(WTF::StringBuilder&) const + 370 (InspectorValues.cpp:777) 2 com.apple.JavaScriptCore 0x00000001086208f3 Inspector::InspectorValue::toJSONString() const + 83 (InspectorValues.cpp:549) 3 com.apple.JavaScriptCore 0x00000001085d0bf1 Inspector::BackendDispatcher::sendResponse(long, WTF::RefPtr<Inspector::InspectorObject>&&) + 321 (InspectorBackendDispatcher.cpp:197) 4 com.apple.JavaScriptCore 0x00000001085d89fe Inspector::CSSBackendDispatcher::getNamedFlowCollection(long, WTF::RefPtr<Inspector::InspectorObject>&&) + 558 (InspectorBackendDispatchers.cpp:722) 5 com.apple.JavaScriptCore 0x00000001085d5b04 Inspector::CSSBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<Inspector::InspectorObject>&&) + 580 (InspectorBackendDispatchers.cpp:257) 6 com.apple.JavaScriptCore 0x00000001085d1685 Inspector::BackendDispatcher::dispatch(WTF::String const&) + 2293 (Ref.h:57) 7 com.apple.WebKit 0x000000010382f142 void IPC::handleMessage<Messages::WebInspector::SendMessageToBackend, WebKit::WebInspector, void (WebKit::WebInspector::*)(WTF::String const&)>(IPC::Decoder&, WebKit::WebInspector*, void (WebKit::WebInspector::*)(WTF::String const&)) + 66 (HandleMessage.h:127) 8 com.apple.WebKit 0x000000010366571b IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 119 (Connection.cpp:930) 9 com.apple.WebKit 0x000000010366825a IPC::Connection::dispatchOneMessage() + 176 (Connection.cpp:959) 10 com.apple.JavaScriptCore 0x0000000108ab89d4 WTF::RunLoop::performWork() + 164 (RunLoop.cpp:107) 11 com.apple.JavaScriptCore 0x0000000108ab8bf2 WTF::RunLoop::performWork(void*) + 34 (RunLoopCF.cpp:39) 12 com.apple.CoreFoundation 0x00007fff8b84b3e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 13 com.apple.CoreFoundation 0x00007fff8b82c65c __CFRunLoopDoSources0 + 556 14 com.apple.CoreFoundation 0x00007fff8b82bb46 __CFRunLoopRun + 934 15 com.apple.CoreFoundation 0x00007fff8b82b544 CFRunLoopRunSpecific + 420 16 com.apple.HIToolbox 0x00007fff8ad8bebc RunCurrentEventLoopInMode + 240 17 com.apple.HIToolbox 0x00007fff8ad8bcf1 ReceiveNextEventCommon + 432 18 com.apple.HIToolbox 0x00007fff8ad8bb26 _BlockUntilNextEventMatchingListInModeWithFilter + 71 19 com.apple.AppKit 0x00007fff89324a54 _DPSNextEvent + 1120 20 com.apple.AppKit 0x00007fff89aa07ee -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 2796 21 com.apple.AppKit 0x00007fff893193db -[NSApplication run] + 926 22 com.apple.AppKit 0x00007fff892e3e0e NSApplicationMain + 1237 23 libxpc.dylib 0x00007fffa17bc8c7 _xpc_objc_main + 775 24 libxpc.dylib 0x00007fffa17bb2e4 xpc_main + 494 25 com.apple.WebKit.WebContent 0x000000010360c69a main + 490 (XPCServiceMain.mm:122) 26 libdyld.dylib 0x00007fffa1563235 start + 1
Attachments
patch
(1.79 KB, patch)
2017-09-20 22:54 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-09-20 10:22:09 PDT
Skipped these tests in
https://trac.webkit.org/changeset/222268/webkit
inspector/dom/content-flow-content-nodes.html inspector/dom/content-flow-content-removal.html inspector/dom/content-flow-list.html inspector/dom/content-node-region-info.html
Ryan Haddad
Comment 2
2017-09-20 10:22:38 PDT
This started with
https://trac.webkit.org/changeset/222259/webkit
, which removes CSS regions / "named flow" code.
Ryan Haddad
Comment 3
2017-09-20 10:23:14 PDT
Maybe these tests will need to be removed.
Antti Koivisto
Comment 4
2017-09-20 22:50:19 PDT
<
rdar://problem/34559968
>
Antti Koivisto
Comment 5
2017-09-20 22:54:22 PDT
Created
attachment 321411
[details]
patch
Matt Baker
Comment 6
2017-09-20 23:14:08 PDT
Support for CSS regions in Web Inspector is being removed here: <
https://webkit.org/b/177287
> Web Inspector: Remove support for CSS Regions
WebKit Commit Bot
Comment 7
2017-09-20 23:49:57 PDT
Comment on
attachment 321411
[details]
patch Clearing flags on attachment: 321411 Committed
r222314
: <
http://trac.webkit.org/changeset/222314
>
WebKit Commit Bot
Comment 8
2017-09-20 23:49:59 PDT
All reviewed patches have been landed. Closing bug.
Antti Koivisto
Comment 9
2017-09-20 23:51:29 PDT
That should fix the crashes, the tests and code can be remove in
bug 177287
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug