inspector/dom/content-node-region-info.html and inspector/dom/content-flow tests crashing https://bugs.webkit.org/show_bug.cgi?id=177249 <rdar://problem/34559968>

Unreviewed.


* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::getNamedFlowCollection):

    Fix crashing by adding a few lines of removed code back.


Canonical link: https://commits.webkit.org/193623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222314 268f45cc-cd09-0410-ab3c-d52691b4dbfc